@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.762.2.13 2008/10/28 19:43:48 tt Exp $
+# $Id: CHANGES,v 1.762.2.14 2008/10/28 19:55:33 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.4 (2008/??/??)
+ - (2008/10/28) Fixed bug# 3402 - AgentLinkObject crashes with "Got no
+    UserLanguage" if browser sends exotic language.
  - (2008/10/28) Fixed bug# 3405 - Input field agent-email-address too short.
  - (2008/10/28) Fixed bug# 1719 - psql -u deprecated.
  - (2008/10/28) Fixed bug# 3376 - GenericAgent: A warning like "you have to set
